@@ -25,7 +25,12 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all,-pie
 DPKG_EXPORT_BUILDFLAGS = 1
 -include /usr/share/dpkg/buildflags.mk
 LDFLAGS+= -Wl,--as-needed -L/usr/lib/mit-krb5 -L/usr/lib/$(DEB_HOST_MULTIARCH)/mit-krb5
-CFLAGS+= -fPIC -pie -I/usr/include/mit-krb5
+CFLAGS+= -I/usr/include/mit-krb5
+# skip -pie on 32bit archs for performance and stability reasons
+# (http://www.postgresql.org/message-id/20140519115318.GB7296@msgid.df7cb.de)
+ifneq ($(shell dpkg-architecture -qDEB_HOST_ARCH_BITS || :),32)
+CFLAGS+= -fPIC -pie
+endif
 
 # When protecting the postmaster with oom_adj=-17, allow the OOM killer to slay
 # the backends (http://archives.postgresql.org/pgsql-hackers/2010-01/msg00170.php)
