@@ -7,6 +7,7 @@ postgresql-9.4 (9.4~beta1-2) UNRELEASED; urgency=medium
   * Stop providing postgresql-dbg in postgresql-9.4-dbg. Its only purpose was
     to conflict with other postgresql-*-dbg packages, and that's no longer
     needed with build-id debug symbols.
+  * Skip -pie on 32bit archs for performance and stability reasons.
 
  -- Christoph Berg <myon@debian.org>  Tue, 27 May 2014 15:01:55 +0200
 
